--- a/Frontend/Core/Components/Layout/NavMenu.razor
+++ b/Frontend/Core/Components/Layout/NavMenu.razor
@@ -1,62 +1,34 @@
-﻿﻿<div class="top-row ps-3 navbar navbar-dark">
-	<div class="container-fluid">
-		<a class="navbar-brand" href="">Core</a>
-	</div>
-</div>
+﻿<input type="checkbox" id="nav-toggle" class="nav-toggle" />
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+<label for="nav-toggle" class="hamburger-clean">
+    <span></span>
+    <span></span>
+    <span></span>
+</label>
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-	<nav class="flex-column">
+<aside class="drawer-menu" onclick="document.getElementById('nav-toggle').checked = false">
+    <nav>
+        @if (IsLogged)
+        {
+                <NavItem Icon="bi bi-house-door" Label="Home" Href="" />
+                <NavItem Icon="bi bi-calendar3" Label="Kalendarz" Href="kalendarz" />
+                <NavItem Icon="bi bi-heart-pulse" Label="Zabiegi" Href="care" />
+                <NavItem Icon="bi bi-columns-gap" Label="Nowy panel" Href="newhome" />
+                <NavItem Icon="bi bi-box-arrow-right" Label="Wyloguj się" Href="logout" />
 
+                <hr />
 
-		@if (IsLogged)
-		{
-			<div class="nav-item px-3">
-				<NavLink class="nav-link" href="">
-					<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> HOME
-				</NavLink>
-			</div>
-			<div class="nav-item px-3">
-				<NavLink class="nav-link" href="kalendarz">
-					<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Kalendarz
-				</NavLink>
-			</div>
-			<div class="nav-item px-3">
-				<NavLink class="nav-link" href="logout">
-					<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Wyloguj się
-				</NavLink>
-			</div>
-			<div class="nav-item px-3">
-				<NavLink class="nav-link" href="care">
-					<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Zabiegi - test
-				</NavLink>
-			</div>
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="newhome">
-                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Nowy panel glowny
-                </NavLink>
-            </div>
-		}
-		else
-		{
-
-			@*Test rejestracji*@
-			<div class="nav-item px-3">
-				<NavLink class="nav-link" href="rejestracja">
-					<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Rejestracja - test
-				</NavLink>
-			</div>
-			<div class="nav-item px-3">
-				<NavLink class="nav-link" href="login">
-					<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Logowanie - test
-				</NavLink>
-			</div>
-		}
-	</nav>
-</div>
+                <NavItem Icon="bi bi-person-plus" Label="Profil" Href="profil" />
+                <NavItem Icon="bi bi-gear" Label="Ustawienia" Href="settings" />
+        }
+        else
+        {
+                <NavItem Icon="bi bi-person-plus" Label="Rejestracja" Href="rejestracja" />
+                <NavItem Icon="bi bi-box-arrow-in-right" Label="Logowanie" Href="login" />
+        }
+    </nav>
+</aside>
 
 @code {
-	[Parameter]
-	public bool IsLogged { get; set; }
+    [Parameter] public bool IsLogged { get; set; }
 }
